# distributed-sync-system-11221023-Hylmi_Wahyudi

./: .env.example  .gitignore  DEMO_QUICK_START.md  KONSEP_DASAR_SIMPLE.md  LICENSE  QUICKSTART.md  README.md  REQUIREMENT_COMPLIANCE.md  SUBMISSION_CHECKLIST.md  pyproject.toml  requirements.txt
benchmarks/: load_test_scenarios.py
docker/: Dockerfile.node  docker-compose.yml  grafana-dashboard.json  prometheus.yml
docs/: GRAFANA_SETUP.md  TROUBLESHOOTING.md  api_spec.yaml  architecture.md  deployment_guide.md  performance_analysis.md  video_presentation_script.md
examples/: generate_mock_metrics.py  usage_examples.py
src/: __init__.py  main.py
src/communication/: __init__.py  failure_detector.py  message_passing.py
src/consensus/: __init__.py  pbft.py  raft.py
src/nodes/: __init__.py  base_node.py  cache_node.py  lock_manager.py  queue_node.py
src/utils/: __init__.py  config.py  metrics.py
tests/integration/: test_system.py
tests/unit/: test_lock_manager.py  test_queue_node.py
